# qscaled

./: .gitignore  LICENSE  README.md  analyze_fitted.ipynb  environment.yml  pyproject.toml  remake_zip.py  setup.py
data/fits/: baseline_fits.npy  ours_fits.npy
data/grid_proposed_hparams/: gym_sweep.csv  gym_sweep_baseline_utd2.0_new.csv  gym_sweep_fitted.csv
examples/1_grid_search/: blah.npy  compute_params.py  dmc_compute_params.py  gym_compute_params.py
examples/2_fitted/: dmc_explore.ipynb  gym_explore.ipynb
examples/outputs/grid_proposed_fits/: dmc_sweep_bs_fit.npy  gym_sweep_lr_fit.npy
examples/outputs/grid_proposed_hparams/: dmc_sweep_baseline_utd2_new.csv  dmc_sweep_fitted.csv  gym_sweep_fitted.csv
experiments/1_grid_search/: dmc_compute_params.py  gym_compute_params.py
experiments/2_fitted/: dmc_explore.ipynb  gym_explore.ipynb
experiments/outputs/data_pareto_fit/: dmc_baseline_utd2.npy  dmc_ours.npy  gym_baseline_utd2.npy  gym_ours.npy
experiments/outputs/time_pareto_fit/: gym_baseline_utd2.npy  gym_ours.npy
notebooks/1_grid_search/: dmc_short.ipynb  gym_extended.ipynb  gym_short.ipynb
outputs/fits/: baseline_fits.npy  ours_fits.npy
outputs/grid_proposed_fits/: dmc_sweep_bs_fit.npy  dmc_sweep_lr_fit.npy  gym_sweep_bs_fit.npy
outputs/grid_proposed_hparams/: dmc_sweep_baseline_utd2.0_existing.csv  dmc_sweep_baseline_utd2.0_new.csv  dmc_sweep_fitted.csv  gym_sweep_baseline_utd2.0_existing.csv  gym_sweep_fitted.csv
qscaled/: __init__.py  bootstrap_envsteps_to_thresh.py  constants.py  linear_fit.py  preprocessing.py  save_params.py  visualization.py
qscaled/core/: bootstrap_envsteps_to_thresh.py  linear_fit.py  preprocessing.py  save_params.py  visualization.py
qscaled/core/fitted/: budget.py  data_efficiency.py  learning_curves.py  power_law.py
qscaled/core/grid_search/: bootstrap_envsteps_to_thresh.py  bootstrapping.py  data_efficiency.py  learning_curves.py  linear_fit.py
qscaled/scripts/: blah.py  compute_params.py  download_zipdata.sh
qscaled/utils/: configs.py  plot_utils.py  state.py  zip_handler.py
qscaled/wandb_utils/: __init__.py  base_collector.py  multiple_seeds_per_run.py  one_seed_per_run.py
utils/: configs.py  create_zip.py  fitting.py  preprocessing.py  wandb_utils.py
(+221 files in other folders)
