[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "qscaled"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "ipykernel",
  "matplotlib",
  "pandas",
  "rliable",
  "scikit-learn",
  "scipy",
  "seaborn",
  "tqdm",
  "wandb",
]
authors = [
    { name = "Oleh Rybkin" },
    { name = "Michal Nauman" },
    { name = "Preston Fu" },
    { name = "Charlie Snell" },
    { name = "Pieter Abbeel" },
    { name = "Sergey Levine" },
    { name = "Aviral Kumar" },
]
maintainers = [
    { name = "Preston Fu", email = "prestonfu@berkeley.edu" }
]
license = { file = "LICENSE" }
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["description"]

[project.optional-dependencies]
dev = [
    "ruff",
]

[project.urls]
Home = "https://github.com/prestonfu/qscaled"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.format]
quote-style = "single"