[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "qscaled"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "ipykernel",
  "matplotlib",
  "pandas",
  "rliable",
  "scikit-learn",
  "scipy",
  "seaborn",
  "tqdm",
  "wandb",
]
license = { file = "LICENSE" }
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["description"]

[project.optional-dependencies]
dev = [
    "ruff",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.format]
quote-style = "single"